add udp file example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(sudoku)
 add_subdirectory(twisted/finger)
 add_subdirectory(wordcount)
 add_subdirectory(zeromq)
+add_subdirectory(udp)
 
 if(CARES_INCLUDE_DIR AND CARES_LIBRARY)
   add_subdirectory(cdns)
